<resources>
    <string name="app_name">MinimalistContentProvider</string>
    <string name="response">Response: \n</string>
    <string name="list_all_words">List all words</string>
    <string name="list_first_word">List first word</string>
    <string name="text_view">"Thus we go! \n"</string>
    <string name="insert">INSERT</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string-array name="words">
        <item>Android</item>
        <item>Activity</item>
        <item>ContentProvider</item>
        <item>ContentResolver</item>
    </string-array>
</resources>